<resources>
    <string name="app_name">WashKaro</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Got It</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nextQues">Next</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="name">Name</string>
    <string name="phone">Number</string>
    <string name="pinCode">Pincode</string>
    <string name="place">You reside in:</string>
    <string name="del">Delhi</string>
    <string name="nondel">Outside Delhi</string>
    <string name="begin">Begin</string>
    <string name="sign_out">Sign Out</string>
    <string name="start_phone_auth">Send</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number in +91 format</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="verification_code_help">You will receive an OTP soon!</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt" translatable="false">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="tavlab_logo">Tav Lab at IIIT Delhi</string>
    <string name="precog_logo">Precog Lab at IIIT Delhi</string>
    <string name="iiitd_logo">IIIT Delhi</string>
    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>
    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="login">Login</string>
    <string name="user_id_key" translatable="false">user_id_key_pref</string>
    <string name="uuid_id_key" translatable="false">uuid_id_key_pref</string>
    <string name="phone_key" translatable="false">phone_key_pref</string>
    <string name="state_key" translatable="false">status_key_pref</string>
    <string name="shared_prefs_file" translatable="false">shared_prefs</string>
    <string name="user_user_state_notif" translatable="false">user_user_state_notif</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">covid_alert_channel</string>
    <string name="default_notification_channel_name" translatable="false">covidAlert</string>
    <string name="msg_subscribe_failed">Failed to subscribe to covidAlert topic</string>
    <string name="fcm_message" translatable="false">WashKaro</string>
    <string name="alert_message">Please maintain social distancing to keep you and your family safe</string>
    <string name="network_not_enabled">Location is not enabled</string>
    <string name="location_is_not_enabled">Location is not enabled</string>
    <string name="show_location_setting">Enable Location</string>
    <string name="cancel_btn">Cancel</string>
    <string name="share_this_app">Share this app</string>
    <string name="share_content">Help stop the spread of COVID-19 by sharing this app with family and friends.</string>
    <string name="symptom_tracker">Symptom Tracker</string>
    <string name="symptom_tracker_content">Use this for a quick self-assessment.</string>
    <string name="you_are_safe">You are safe!</string>
    <string name="you_are_unsafe">You are maybe at risk!</string>
    <string name="you_are_safe_content">Low risk of corona virus infection.</string>
    <string name="you_are_unsafe_content">Please maintain social distancing.</string>
    <string name="presented_to_you_by">WashKaro, presented to you by</string>
    <string name="priyanka">Priyanka Syal</string>
    <string name="priyanka_tag">Software Engineer, Microsoft IDC</string>
    <string name="chirag">Chirag Jain</string>
    <string name="chirag_tag">Undergraduate, IIIT Delhi</string>
    <string name="pk">Dr. Ponnurangam Kumaraguru</string>
    <string name="pk_description">Professor (CSE), IIIT Delhi</string>
    <string name="tav">Dr. Tavpritesh Sethi</string>
    <string name="tav_description">Assistant Professor(CB), IIIT Delhi</string>
    <string name="rohan">Rohan Pandey</string>
    <string name="rohan_tag">Undergraduate, SNU</string>
    <string name="kanav">Kanav Bhagat</string>
    <string name="kanav_tag">Undergraduate, IIIT Delhi</string>
    <string name="vaibhav">Vaibhav Gautam</string>
    <string name="vaibhav_tag">Undergraduate, SNU</string>
    <string name="himanshu">Himanshu Sharma</string>
    <string name="himanshu_tag">Undergraduate, GL Bajaj Institute</string>
    <string name="bhavika">Bhavika Rana</string>
    <string name="bhavika_tag">Undergraduate, IIIT Delhi</string>
    <string name="harsh">Harsh Bandhey</string>
    <string name="harsh_tag">Undergraduate, IIIT Delhi</string>
    <string name="vihaan">Vihaan Misra</string>
    <string name="vihaan_tag">Undergraduate, DTU</string>
    <string name="vrinda">Vrinda Narayan</string>
    <string name="vrinda_tag">Undergraduate, IIIT Delhi</string>
    <string name="yashwin">Yashwin Agrawal</string>
    <string name="yashwin_tag">Undergraduate, IIIT Delhi</string>
    <string name="tanuj">Tanuj Dabas</string>
    <string name="tanuj_tag">Undergraduate, IIIT Delhi</string>
    <string name="rishabh">Rishabh Jalan</string>
    <string name="ayush">Ayush Garg</string>
    <string name="akshat">Akshat Wadhwa</string>
    <string name="precogURL" translatable="false">http://precog.iiitd.edu.in/</string>
    <string name="iiitdURL" translatable="false">https://www.iiitd.ac.in/</string>
    <string name="tavlabURL" translatable="false">https://tavlab.iiitd.edu.in/</string>
    <string name="chiragURL" translatable="false">https://www.linkedin.com/in/jnchirag/</string>
    <string name="priyankaURL" translatable="false">https://www.linkedin.com/in/priyanka-syal-671b9495/</string>
    <string name="pkURL" translatable="false">https://www.linkedin.com/in/ponguru/</string>
    <string name="tavURL" translatable="false">https://www.linkedin.com/in/tavpritesh/</string>
    <string name="rohanURL" translatable="false">https://www.linkedin.com/in/rohan-pandey-145170175/</string>
    <string name="himanshuURL" translatable="false">https://www.linkedin.com/in/himanshu-sharma2950/</string>
    <string name="kanavURL" translatable="false">https://www.linkedin.com/in/kanav-bhagat-133229130/</string>
    <string name="bhavikaURL" translatable="false">https://www.linkedin.com/in/bhavikarana/</string>
    <string name="vaibhavURL" translatable="false">https://www.linkedin.com/in/vaibhav-gautam-171775187/</string>
    <string name="harshURL" translatable="false">https://www.linkedin.com/in/harshbandhey/</string>
    <string name="vrindaURL" translatable="false">https://www.linkedin.com/in/vrinda-narayan-6a42a71a3/</string>
    <string name="tanujURL" translatable="false">https://www.linkedin.com/in/tanuj-dabas-7b28a9151/</string>
    <string name="rishabhURL" translatable="false">https://www.linkedin.com/in/jalanrishabh</string>
    <string name="ayushURL" translatable="false">https://www.linkedin.com/in/ayush-garg-6019aa1a2</string>
    <string name="akshatURL" translatable="false">https://www.linkedin.com/in/akshat-wadhwa-0852761a6</string>
    <string name="vihaanURL" translatable="false">https://www.linkedin.com/in/vihaan-m-a3841811a/</string>
    <string name="yashwinURL" translatable="false">https://www.linkedin.com/in/yashwin-agrawal-6b28bb176</string>
    <string name="govt_updates_act">Government Updates</string>
    <string name="guidelines_act">Guidelines (By WHO)</string>
    <string name="myth_act">Myth Busters(By WHO)</string>
    <string name="who_chatbot">WHO Chatbot</string>
    <string name="delhi_gov_helpdesk">Delhi Gov Corona Helpdesk</string>
    <string name="my_gov_helpdesk">MyGov Corona Helpdesk</string>
    <string name="chat_now">Chat Now</string>
    <string name="cbot2_deatils">This Government of India\'s COVID-19 helpdesk to create awareness and help you and your family stay safe.</string>
    <string name="cbot3_deatils">This Government of Delhi\'s COVID-19 helpdesk to create awareness and help you and your family stay safe.</string>
    <string name="cbot1_deatils">This service will provide you with the latest information and guidance from WHO on the current outbreak of coronavirus.</string>
    <string name="cbot0_deatils">This Chatbot helps you find find the right information at the right time!</string>
    <string name="please_select_one_choice">Please select one choice</string>
    <string name="covid_is_present">You are suspected of having COVID 19</string>
    <string name="covid_is_not_present">You are not suspected of having COVID 19</string>
    <string name="play_audio">Play Audio</string>
    <string name="india_covid_map_tile">India COVID Map</string>
    <string name="who_guidelines_tile">WHO Guidelines</string>
    <string name="myth_busters_tile">Myth Busters</string>
    <string name="empty_stats" translatable="false">0</string>
    <string name="govt_advisory_tile">Govt Advisory</string>
    <string name="symptom_tracker_tile">Symptom Tracker</string>
    <string name="contact_tracer_tile">Contact Tracer</string>
    <string name="social_distancing_tile">Social Distancing</string>
    <string name="chatbot_tile">Chatbots</string>
    <string name="onair_tile">onAIr</string>
    <string name="misc_tile">More Info</string>
    <string name="passengers_screened_tile">Passesgers screened at airport</string>
    <string name="active_case_tile">Active COVID19 Cases</string>
    <string name="cured_case_tile">Cured or Discharged Cases</string>
    <string name="death_case_tile">Death Cases</string>
    <string name="migrated_patient_tile">Migrated Patients</string>
    <string name="question1">Have you traveled or lived a country/Indian state reporting community transmission in the last 14 days?</string>
    <string name="question2">Have you been in close contact with a probable or confirmed COVID-19 patient within the past 14 days?</string>
    <string name="question3">Do you have fever?</string>
    <string name="question4">Do you have cough?</string>
    <string name="question5">Do you have shortness in breath?</string>
    <string name="question6">Were your symptoms severe enough to require hospital admission?</string>
    <string name="question7">Did the doctor provide an alternative explanation for the symptoms?</string>
    <string name="min_ass">2-Minute Self Assessment</string>
    <string name="min_ass_desc">Based on WHO Guidelines for Suspect Case Identification</string>
    <string name="relevant">Relevant</string>
    <string name="irrelevant">Irrelevant</string>
    <string name="covid_map" translatable="false">http://coronaactionindia.tavlab.iiitd.edu.in/pages/map.html</string>
    <string name="privacy_policy_url" translatable="false">https://tavlab.iiitd.edu.in/WashKaro/privacy_policy.html</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="survey">Survey</string>
    <string name="language">Language</string>
</resources>