<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="?attr/actionBarPopupTheme">

    <item
        android:id="@+id/lang_togg_butt"
        android:icon="@drawable/ic_language"
        android:iconTint="@color/app_pink"
        android:title="@string/language"
        app:showAsAction="always" />
    <item
        android:id="@+id/Survey"
        android:title="@string/survey"
        app:showAsAction="never" />
    <item
        android:id="@+id/developers"
        android:title="@string/about_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/research_analytics"
        android:title="@string/research_analytics"
        app:showAsAction="never" />

</menu>