<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".about.aboutActivity">

        <ImageView
            android:id="@+id/tavlabLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/tavlab_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/precogLogo"
            app:srcCompat="@drawable/tavlab" />

        <ImageView
            android:id="@+id/precogLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/about_bottom_margin"
            android:contentDescription="@string/iiitd_logo"
            app:layout_constraintEnd_toStartOf="@+id/iiitdLogo"
            app:layout_constraintStart_toEndOf="@+id/tavlabLogo"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/precog" />

        <ImageView
            android:id="@+id/iiitdLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/precog_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/precogLogo"
            app:srcCompat="@drawable/iiitd" />

        <in.srain.cube.views.GridViewWithHeaderAndFooter
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/precogLogo">
        </in.srain.cube.views.GridViewWithHeaderAndFooter>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_bottom_margin"
            android:text="@string/presented_to_you_by"

            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/app_light_black"

            android:textSize="@dimen/about_head"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>