<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity">

    <Button
        android:id="@+id/nextQues"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:layout_marginTop="104dp"
        android:background="@color/newColour"
        android:text="@string/nextQues"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answers" />

    <RadioGroup
        android:id="@+id/answers"
        android:layout_width="290dp"
        android:layout_height="109dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <RadioButton
            android:id="@+id/yesButton"
            android:layout_width="293dp"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/noButton"
            android:layout_width="293dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/pageNo"
        android:layout_width="81dp"
        android:layout_height="35dp"
        android:layout_marginTop="38dp"
        android:shadowColor="@color/Shadow"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="350dp"
        android:layout_height="179dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageNo">

        <TextView
            android:id="@+id/question"
            android:layout_width="350dp"
            android:layout_height="182dp"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="@color/Shadow"
            android:shadowDx="10"
            android:shadowDy="-10"
            android:shadowRadius="25"
            android:textAllCaps="true"
            android:textSize="24sp"
            app:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>